--- a/backend/api/restaurant/models/restaurant.settings.json
+++ b/backend/api/restaurant/models/restaurant.settings.json
@@ -34,6 +34,9 @@
       "type": "string",
       "unique": true,
       "required": true
+    },
+    "division": {
+      "model": "division"
     }
   }
 }
