--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js -p $PORT",
+    "start": "NODE_ENV=production next start -p $PORT",
     "heroku-postbuild": "next build"
   },
   "license": "MIT"
