--- a/backend/api/restaurant/models/restaurant.settings.json
+++ b/backend/api/restaurant/models/restaurant.settings.json
@@ -27,8 +27,8 @@
       "required": false
     },
     "dishes": {
-      "collection": "dish",
-      "via": "restaurant"
+      "via": "restaurant",
+      "collection": "dish"
     },
     "slug": {
       "type": "string",
