--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "graphql": "15.0.0",
     "isomorphic-fetch": "2.2.1",
     "js-cookie": "2.2.1",
-    "next": "^9.5.3",
+    "next": "canary",
     "next-apollo": "3.1.10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
