--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
     "@apollo/client": "^3.1.4",
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.5.0",
     "apollo-boost": "0.4.7",
