--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
     "next-apollo": "3.1.10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-toastify": "^6.0.8",
-    "reactstrap": "^8.4.1"
+    "react-hook-form": "^6.9.0",
+    "react-toastify": "^6.0.8"
   },
   "scripts": {
     "dev": "next",
