--- a/backend/api/cart/models/cart.settings.json
+++ b/backend/api/cart/models/cart.settings.json
@@ -16,6 +16,10 @@
     },
     "elements": {
       "type": "json"
+    },
+    "order": {
+      "via": "cart",
+      "model": "order"
     }
   }
 }
