--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.5.0",
     "apollo-boost": "0.4.7",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "axios": "0.19.2",
     "express": "^4.17.1",
     "graphql": "15.0.0",
@@ -15,6 +17,7 @@
     "js-cookie": "2.2.1",
     "next": "canary",
     "next-apollo": "3.1.10",
+    "next-with-apollo": "^5.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.9.0",
