--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -62,6 +62,10 @@
     "orders": {
       "via": "user",
       "collection": "order"
+    },
+    "donates": {
+      "via": "user",
+      "collection": "donate"
     }
   }
 }
