implement tests and add donate

--- a/backend/api/donate/models/donate.settings.json
+++ b/backend/api/donate/models/donate.settings.json
@@ -21,6 +21,9 @@
     "confirmed": {
       "type": "boolean",
       "default": false
+    },
+    "anothermessage": {
+      "type": "string"
     }
   }
 }
