--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,17 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "test": "jest --watch --silent=false --detectOpenHandles"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "dotenv": "^8.2.0",
+    "jest": "^26.6.3"
+  },
   "dependencies": {
     "axios": "^0.20.0",
+    "crypto": "^1.0.1",
     "strapi": "3.1.4",
     "strapi-admin": "3.1.4",
     "strapi-connector-mongoose": "3.1.4",
