--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "axios": "0.19.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "graphql": "15.0.0",
     "isomorphic-fetch": "2.2.1",
@@ -27,7 +29,7 @@
     "build": "next build",
     "start": "NODE_ENV=production next start -p $PORT",
     "heroku-postbuild": "next build",
-    "test": "jest --watch --silent=false",
+    "test": "jest --watch --silent=false --detectOpenHandles",
     "test:ci": "jest --ci"
   },
   "license": "MIT",
