order_id modify newdonate

--- a/backend/api/donate/models/donate.settings.json
+++ b/backend/api/donate/models/donate.settings.json
@@ -24,6 +24,12 @@
     },
     "anothermessage": {
       "type": "string"
+    },
+    "amount": {
+      "type": "biginteger"
+    },
+    "order_id": {
+      "type": "biginteger"
     }
   }
 }
